$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.92-1 (opened August 23, 2011)

	* NAMESPACE: imports nobs from permute_0.5-3 in R 2.12.2 and older
	which do not yet have nobs() generic.

	* vegandocs: shows the permutation vignette of the 'permute'
	package. 
	
Version 1.92-0 (closed August 23, 2011)

	* open new version with the release of vegan_1.17-12 on August 17,
	2011. 

	* fitspecaccum: a typo and a condition was never true.

	* monoMDS & metaMDS: always print types of stress and ties.

	* NAMESPACE: export pasteCall for analogue.

	* NEWS: added file NEWS.Rd for vegan release 2.0 news in Rd format.
	Keeping neat formatting of this file may be challenging to many
	text editors, but it is worth trying. This file should list the
	important items for regular vegan users, whereas this ChangeLog
	should explain the changes to other vegan developers. If
	getOption("help_type") == "html", should start a browser to show
	the NEWS, and use text console otherwise ("html" tested on MacOS
	R.App GUI, text mode in Linux and MacOS bash shells, no testing on
	Windows yet). Although the browser knows how to display NEWS.Rd,
	it does not format the page properly (\code{foo} shows as ordinary
	text etc). As a kluge we now make a NEWS.html file in the inst/doc
	directory. NEWS.html cannot be made in the inst/ directory since
	browser only agrees to show NEWS (plain) in the main directory or
	files in doc directory.
	
Version 1.91-0 (closed August 18, 2011)

	* NAMESPACE: added namespace to vegan. Currently hides all that
	can be hidden, and exports only main functions: Some method
	functions will be probably exported later. Superfluous aliases
	were removed with the registration of S3 methods, and scoping was
	changed a bit in anova.ccabyterm, model.matrix.cca and
	model.frame.cca. as.mcmc is not yet registred: it need changes in
	Imports field of DESCRIPTION (same with vif.cca: vif is defined in
	car, but we could have our private vif generic here?).
