@@ -157,6 +157,7 @@ S3method(fitted, cca)
 S3method(fitted, procrustes)
 S3method(fitted, radfit)
 S3method(fitted, rda)
+S3method(fitted, specaccum)
 # goodness: vegan
 S3method(goodness, cca)
 S3method(goodness, metaMDS)
@@ -249,9 +250,11 @@ S3method(points, radline)
 # predict: stats
 S3method(predict, cca)
 S3method(predict, decorana)
+S3method(predict, fitspecaccum)
 S3method(predict, humpfit)
 S3method(predict, procrustes)
 S3method(predict, rda)
+S3method(predict, specaccum)
 # print: base
 S3method(print, CCorA)
 S3method(print, MOStest)
